--- a/src/ToDoList/ToDoList.css
+++ b/src/ToDoList/ToDoList.css
@@ -13,28 +13,53 @@
 	position: relative;
 }
 
-#app-to-do-list li:hover {
-	background-color: #ddd !important;
-}
-
 #app-to-do-list li:nth-child(odd) {
 	background-color: #f9f9f9;
 }
 
-.trailing-close {
+#app-to-do-list li:hover {
+	background-color: #ddd;
+}
+
+#app-to-do-list li.checked {
+	background-color: #888;
+	color: white;
+	text-decoration: line-through;
+}
+
+#app-to-do-list li.checked:before {
+	content: "✓";
+	font-size: 20px;
+	height:100%;
+	width: 40px;
+	margin: 0;
+	padding: 0;
+
+	/* Positioning */
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+span.trailing-close {
 	font-size: 25px;
 	width: 8%;
+	min-width: 50px;
 	height: 100%;
 	text-align: center;
 	right: 0;
 	top: 0;
+	transition: 0.2s;
 	position: absolute;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-.trailing-close:hover {
+span.trailing-close:hover {
 	background-color: #f44336;
 	color: white;
 }
